minor style change solving layout issue with safari

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ body {
     font-size: 2.5vw;
   }
   .main-heading {
-    font-size: 2.95vw;
+    font-size: 2.8vw;
     line-height: 3vw; 
   }
   .main-container {
